# monilet

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.md  changelog  meson.build
data/: Application.css  com.github.kmal-kenneth.monilet.appdata.xml  com.github.kmal-kenneth.monilet.appdata.xml.in  com.github.kmal-kenneth.monilet.desktop  com.github.kmal-kenneth.monilet.desktop.in  com.github.kmal-kenneth.monilet.gresource.xml  com.github.kmal-kenneth.monilet.gschema.xml  meson.build
data/css/: style.css
debian/: changelog  control  copyright  rules
debian/source/: format
meson/: post_install.py
po/: LINGUAS  POTFILES  com.github.kmal-kenneth.monilet.pot  es.po  fr.po  meson.build  pl.po  pt.po
po/extra/: POTFILES  es.po  extra.pot  fr.po  pl.po  pt.po
src/: AppSettings.vala  Application.vala  MainWindow.vala  meson.build
src/Services/: CPU.vala  Core.vala  Memory.vala  Swap.vala  UnitFormat.vala
src/Utils/: UtilsWidget.vala
src/Widgets/: ProgressCPU.vala  ProgressCore.vala  WidgetCpu.vala  WidgetMemory.vala
